@@ -1,5 +1,8 @@
 2015-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* tools/fax2tiff.c (main): Eliminate a compiler warning in 64-bit
+	builds about cast to thandle_t.
+
 	* test/rewrite_tag.c (main): Does not require any arguments.
 
 2015-08-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
